# iree

./: BUILD.bazel  CMakeLists.txt  SUBMODULE_VERSIONS.txt
.github/workflows/: test_oneshot_candidate.yml
build_tools/bazel_to_cmake/: bazel_to_cmake_targets.py
build_tools/cmake/: build_runtime_small.sh  iree_copts.cmake  riscv.toolchain.cmake
docs/developers/developing_iree/: benchmarking.md
docs/developers/get_started/: getting_started_linux_bazel.md  getting_started_macos_bazel.md  getting_started_macos_cmake.md  getting_started_windows_bazel.md
iree/base/: CMakeLists.txt  status.c  time.c
iree/base/internal/: CMakeLists.txt  synchronization.c
iree/compiler/Conversion/: init_conversions.h
iree/compiler/Conversion/LinalgToLLVM/: CMakeLists.txt  ConvertToLLVM.cpp  LinalgTileAndVectorizePass.cpp
iree/compiler/Conversion/VectorToLLVM/: BUILD  CMakeLists.txt  Passes.h  VectorContractToAArch64Dot.cpp
iree/compiler/Conversion/VectorToLLVM/test/: vector_matmul_to_aarch64_asm.mlir
iree/hal/: BUILD  buffer.c
iree/hal/drivers/: CMakeLists.txt
iree/hal/local/: CMakeLists.txt
iree/modules/strings/: CMakeLists.txt
iree/modules/tensorlist/: CMakeLists.txt
iree/samples/vision_static/: CMakeLists.txt  create_bytecode_module.c  create_c_module.c  mnist_static.c  mnist_static_bytecode_test.txt  mnist_static_c_test.txt
iree/tools/: init_passes.h
iree/vm/: shims_emitc.h
samples/static_library/: CMakeLists.txt
